# GP_Project

./: .env.example  .gitignore  CLAUDE.md  README.md  future features.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: __init__.py  agent_service.py  auth.py  chat_history.db  database.py  main.py
benchmark/: cli.py  evaluator.py  metrics.py  report.py  runner.py  tasks.json
electron/: main.js  preload.js
frontend/: app.js  index.html  styles.css
