[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Cua computer-use agent framework (agent_service.py) ---
    # Drives the sandboxed Linux desktop via Docker and wraps the LLM call.
    "cua-agent[all]>=0.7.24",
    "cua-computer>=0.5.12",
    # agent_service.py formats models as "openrouter/{model}" — litellm's
    # routing convention — when calling OpenRouter. cua-agent[all] likely
    # pulls litellm in transitively, but it's pinned explicitly here since
    # our code depends directly on its routing behavior.
    "litellm>=1.0.0",

    # --- FastAPI backend (main.py) ---
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",

    # --- Persistence (database.py) ---
    "sqlalchemy>=2.0.0",

    # --- Auth (auth.py) ---
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.4's bcrypt version probe raises a (harmless) warning
    # against bcrypt>=4.1, since bcrypt 4.1 dropped the __about__ module
    # passlib reads. Pinned below 4.1 to keep logs clean; safe to relax
    # once passlib ships a fix.
    "bcrypt>=4.0.0,<4.1.0",
    # Not imported directly anywhere, but required at runtime — FastAPI's
    # OAuth2PasswordRequestForm (used by POST /token) needs it to parse
    # form-encoded request bodies.
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]